--- a/templates/index.jade
+++ b/templates/index.jade
@@ -10,5 +10,5 @@ block content
         for post in autopages.readDirectory('posts')
             .row
                 .column-12
-                    | #{autpages.parseMarkdown('posts/' + post)}
+                    | #{autopages.parseMarkdown('posts/' + post)}
 
