--- a/templates/posts/_index.jade
+++ b/templates/posts/_index.jade
@@ -5,5 +5,5 @@ block content
     .content
         .row
             .column-12
-                | #{autopages.parseMarkdown(file)}
+                != autopages.parseMarkdown(file)
 
