--- a/templates/layout.jade
+++ b/templates/layout.jade
@@ -5,11 +5,11 @@ html(lang="en")
         meta(http-equiv="X-UA-Compatible" content="IE=10; IE=9; IE=8; IE=7; IE=EDGE")
         meta(charset="UTF-8")
         block meta
-        link(rel='stylesheet', href='/css/app.css')
+        link(rel='stylesheet', href='http://mathisonian.github.io/autopages-blog/css/app.css')
 
 body
     block header
     block content
 
     script(src='//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js')
-    script(src='/js/app.js')
+    script(src='http://mathisonian.github.io/autopages-blog/js/app.js')
