--- a/templates/index.jade
+++ b/templates/index.jade
@@ -7,11 +7,11 @@ block header
 
 block content
     .content
-        for post in autopages.readDirectory('posts')
-            .row
-                .column-12
-                    != autopages.parseMarkdown('posts/' + post)
-
-                    a(href="/posts/#{autopages.stripExtension(post)}")
-                        | permalink
+        .row
+            .column-12
+                ul
+                    for post in autopages.readDirectory('posts')
+                        li
+                            a(href="/posts/#{autopages.stripExtension(post)}")
+                                | #{autopages.stripExtension(post)}
 
